feat(lab1): add new logic